Fix tests
Added plugin configurations so that all targets get the experimental
flag. Fixed a broken test.